--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar class="black-toolbar">
     <div class="title-container">
-      <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()" />
+      <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()"/>
       <ion-title>
         Preparación Ante Riesgo<br>y Amenazas
       </ion-title>
@@ -24,7 +24,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content id="main-content">
   <div class="home-container">
     <img src="assets/img/fondo.jpg" class="background-image" />
     <div class="characters">
@@ -35,7 +35,7 @@
       <ion-button expand="block" class="custom-button button1" style="--animation-delay: 0.2s;" (click)="navigateToSeleccionTema()">
         <ion-icon slot="start" name="alert-outline"></ion-icon>
         Prevenciones
-      </ion-button>
+      </ion-button>      
       <ion-button expand="block" class="custom-button button2" style="--animation-delay: 0.4s;" (click)="navigateToSeleccionJuego()">
         <ion-icon slot="start" name="game-controller-outline"></ion-icon>
         Juego
@@ -47,42 +47,41 @@
     </div>
   </div>
   <div class="footer-bar"></div>
-
-  <ion-menu side="end" menuId="custom-menu">
-    <ion-header>
-      <ion-toolbar color="primary">
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content>
-      <ion-list>
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src="assets/img/avatar.png">
-          </ion-avatar>
-          <ion-label>{{ username }}</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-label>Nombre: {{ authService.getCurrentUser()?.nombre }}</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-label>Apellido: {{ authService.getCurrentUser()?.apellido }}</ion-label>
-        </ion-item>
-        <ion-item button (click)="editarPerfil()">
-          <ion-label>Editar Perfil</ion-label>
-        </ion-item>
-        <ion-item button (click)="cambiarContrasena()">
-          <ion-label>Cambiar Contraseña</ion-label>
-        </ion-item>
-        <ion-item *ngIf="isAdmin" button (click)="configuracionAdmin()">
-          <ion-label>Configuración de Administrador</ion-label>
-        </ion-item>
-        <ion-item button (click)="logout()">
-          <ion-label>Salir de Cuenta</ion-label>
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-menu>
-  
 </ion-content>
+
+<ion-menu side="end" menuId="custom-menu" contentId="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item>
+        <ion-avatar slot="start">
+          <img src="assets/img/avatar.png">
+        </ion-avatar>
+        <ion-label>{{ username }}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Nombre: {{ currentUser?.nombre }}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Apellido: {{ currentUser?.apellido }}</ion-label>
+      </ion-item>
+      <ion-item button (click)="editarPerfil()">
+        <ion-label>Editar Perfil</ion-label>
+      </ion-item>
+      <ion-item button (click)="cambiarContrasena()">
+        <ion-label>Cambiar Contraseña</ion-label>
+      </ion-item>
+      <ion-item *ngIf="isAdmin" button (click)="configuracionAdmin()">
+        <ion-label>Configuración de Administrador</ion-label>
+      </ion-item>
+      <ion-item button (click)="logout()">
+        <ion-label>Salir de Cuenta</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
 
