--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -24,8 +24,8 @@
 }
 
 .character {
-  max-width: 20%; /* Ajustado a porcentaje */
-  max-height: 20%; /* Ajustado a porcentaje */
+  max-width: 20%;
+  max-height: 20%;
 }
 
 .buttons {
@@ -35,7 +35,7 @@
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  gap: 2%; /* Ajustado a porcentaje */
+  gap: 2%;
   width: 80%;
 }
 
@@ -87,7 +87,7 @@
 .button-icon {
   width: 30%;
   height: auto;
-  border-radius: 50%; /* Hace la imagen circular */
+  border-radius: 50%;
 }
 
 .footer-bar {
@@ -95,7 +95,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 5%; /* Ajustado a porcentaje */
+  height: 5%;
   background: #000;
 }
 
@@ -139,19 +139,27 @@ ion-header {
 
 .black-toolbar {
   --background: #000 !important;
-  --color: #fff !important; /* Opcional, para el color del texto */
+  --color: #fff !important;
 }
 
 ion-menu {
-  --width: 300px;
+  --width: 25%; /* Ajuste el ancho del menú */
 }
 
-ion-button {
-  --padding-start: 20px;
-  --padding-end: 20px;
-  --border-radius: 10px;
-  --background: #ccc;
+ion-content {
+  --background: #fff;
+}
+
+ion-item {
+  --background: #f9f9f9;
   --color: #000;
-  margin: 10px 0;
-  text-align: left;
+  --padding-start: 16px;
+  --padding-end: 16px;
+  --min-height: 40px;
+  --border-radius: 8px;
+  margin: 8px 0;
+}
+
+ion-item[button] {
+  cursor: pointer;
 }
