--- a/src/app/ranking-global/ranking-global.page.scss
+++ b/src/app/ranking-global/ranking-global.page.scss
@@ -71,56 +71,84 @@
     background: #000;
   }
   
-  ion-header {
-    ion-toolbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 20px;
-    }
-  
-    ion-title {
-      text-align: center;
-      font-size: 1.2rem;
-      line-height: 1.5;
-    }
-  
-    .icon {
-      width: 30px;
-      height: 30px;
-    }
-  
-    .back-icon {
-      width: 30px;
-      height: 30px;
-    }
+  .black-toolbar {
+    --background: #000 !important;
+    --color: #fff !important;
   }
   
-  .carousel-nav {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 5%;
-    height: auto;
-    cursor: pointer;
-    z-index: 10;
-    opacity: 0.5; /* Hacer las flechas parcialmente transparentes */
-  }
-  
-  .carousel-nav.left {
-    left: 10px;
-  }
-  
-  .carousel-nav.right {
-    right: 10px;
-  }
-  
-  .carousel-nav:hover {
-    opacity: 1; /* Hacer las flechas completamente visibles al pasar el ratón por encima */
-  }
-  
-  .nav-icon {
+  .title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+  }
+  
+  img.logo {
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+  }
+  
+  ion-title {
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-right: 30px;
+  }
+  
+  .icon, .back-icon {
+    width: 30px;
     height: auto;
+  }
+  
+  .ranking-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    overflow: hidden;
+  }
+  
+  .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
+  
+  .title-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .title-text {
+    margin-left: 20px;
+  }
+  
+  .buttons-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+    gap: 10px;
+  }
+  
+  .buttons-container ion-button {
+    --padding-top: 0.5em;
+    --padding-bottom: 0.5em;
+    --padding-start: 1em;
+    --padding-end: 1em;
+  }
+  
+  ion-list {
+    margin: 20px;
+  }
+  
+  ion-item h2, ion-item p {
+    margin: 0;
   }
   
