--- a/src/app/administracion/administracion.page.html
+++ b/src/app/administracion/administracion.page.html
@@ -1,47 +1,66 @@
 <ion-header>
   <ion-toolbar class="black-toolbar">
-    <ion-buttons slot="start">
-      <ion-button (click)="goBack()">
-        <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
-      </ion-button>
-    </ion-buttons>
     <div class="title-container">
-      <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()" />
-      <ion-title>
-        Preparación Ante Riesgo<br>y Amenazas
-      </ion-title>
+      <ion-buttons slot="start">
+        <ion-button (click)="goBack()">
+          <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
+        </ion-button>
+      </ion-buttons>
+      <ion-title>Preparación Ante Riesgo y Amenazas</ion-title>
+      <ion-buttons slot="end">
+        <ion-button (click)="navigateToAyuda()">
+          <img src="assets/img/icono de ayuda.png" alt="Ayuda" class="icon">
+        </ion-button>
+      </ion-buttons>
     </div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="administracion-container">
+  <div class="ranking-container">
+    <img src="assets/img/fondo.jpg" class="background-image" />
     <div class="title-box">
-      <img src="assets/img/logo.png" alt="Logo" class="logo" />
+      <img src="assets/img/logo.png" alt="Logo" class="logo"/>
       <div class="title-text">
         <h2>Administradores</h2>
         <h3>Gestión de usuarios</h3>
       </div>
     </div>
-
-    <div class="buttons-row">
-      <ion-button expand="block" (click)="addUser()">Nuevo</ion-button>
-      <ion-button expand="block" (click)="deleteSelectedUsers()">Borrar</ion-button>
-      <ion-button expand="block" (click)="activateSelectedUsers()">Activar</ion-button>
-      <ion-button expand="block" (click)="deactivateSelectedUsers()">Desactivar</ion-button>
-    </div>
-
-    <ion-list class="user-list">
-      <ion-item *ngFor="let user of users">
-        <ion-checkbox slot="start" [(ngModel)]="user.selected"></ion-checkbox>
-        <ion-label>
-          <h2>{{user.apellido}}, {{user.nombre}}</h2>
-          <p>Perfil: {{user.perfil}}</p>
-        </ion-label>
-        <ion-button (click)="editUser(user)" color="primary" class="edit-button">Editar</ion-button>
-        <ion-button (click)="deleteUser(user)" color="danger" class="delete-button">Borrar</ion-button>
-      </ion-item>
-    </ion-list>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="3">
+          <ion-button expand="full" (click)="addUser()">Nuevo</ion-button>
+        </ion-col>
+        <ion-col size="3">
+          <ion-button expand="full" (click)="deleteSelectedUsers()">Borrar</ion-button>
+        </ion-col>
+        <ion-col size="3">
+          <ion-button expand="full" (click)="activateSelectedUsers()">Activar</ion-button>
+        </ion-col>
+        <ion-col size="3">
+          <ion-button expand="full" (click)="deactivateSelectedUsers()">Desactivar</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-list>
+            <ion-item *ngFor="let user of users" [hidden]="!user.nombre || !user.apellido">
+              <ion-checkbox slot="start" [(ngModel)]="user.selected"></ion-checkbox>
+              <ion-label>
+                <h2>{{user.apellido}}, {{user.nombre}}</h2>
+                <p>Perfil: {{user.perfil}}</p>
+              </ion-label>
+              <ion-button (click)="editUser(user)" color="primary" size="small">Editar</ion-button>
+              <ion-button (click)="deleteUser(user)" color="danger" size="small">Borrar</ion-button>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
+
+
+
+
 
