--- a/src/app/administracion/administracion.page.scss
+++ b/src/app/administracion/administracion.page.scss
@@ -1,28 +1,31 @@
-ion-header {
-    ion-toolbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 20px;
-    }
+.black-toolbar {
+    --background: #000 !important;
+    --color: #fff !important;
+  }
   
-    ion-title {
-      text-align: center;
-      font-size: 1.2rem;
-      line-height: 1.5;
-      flex: 1;
-      margin: 0 20px;
-    }
+  ion-toolbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+  }
   
-    .icon {
-      width: 30px;
-      height: 30px;
-    }
+  ion-title {
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    flex: 1;
+    margin: 0 20px;
+  }
   
-    .back-icon {
-      width: 30px;
-      height: 30px;
-    }
+  .icon {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .back-icon {
+    width: 30px;
+    height: 30px;
   }
   
   .administracion-container {
@@ -47,7 +50,7 @@ ion-header {
   .title-box {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     margin-bottom: 20px;
   }
   
@@ -91,10 +94,12 @@ ion-header {
     flex: 1;
   }
   
-  ion-button.edit-button, ion-button.delete-button {
+  ion-button.edit-button,
+  ion-button.delete-button {
     flex: none;
     width: auto;
     min-width: 80px;
     margin-left: 10px;
   }
+  
   
