--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -20,24 +20,34 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 0 0px;
-}
+  padding: 0 10px;
 
-.character {
-  max-width: 16%;
-  max-height: 16%;
-  margin-bottom: 5%;
+  .character {
+    max-width: 20%;
+    max-height: 20%;
+    margin-bottom: 5%;
+  }
 }
 
 .buttons {
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  gap: 2%;
+  gap: 10px;
   width: 80%;
+
+  ion-button {
+    --border-radius: 20px;
+    --background: #fff;
+    --color: #000;
+    font-size: 1rem;
+    animation: slideInLeft 1s ease-in-out;
+    animation-delay: var(--animation-delay);
+    animation-fill-mode: both;
+  }
 }
 
 @keyframes slideInLeft {
@@ -51,90 +61,37 @@
   }
 }
 
-.custom-button {
-  --border-radius: 20px;
-  --background: #fff;
-  --color: #000;
-  --padding-start: 2%;
-  --padding-end: 2%;
-  --padding-top: 2%;
-  --padding-bottom: 2%;
-  --inner-padding: 2%;
-  box-shadow: none !important;
-  font-size: 1.5rem;
-  animation: slideInLeft 1s ease-in-out;
-  animation-delay: var(--animation-delay);
-  animation-fill-mode: both;
-}
-
-.button1 {
-  margin-bottom: 6%;
-  margin-left: 10%;
-  margin-right: 30%;
-}
-
-.button2 {
-  margin-bottom: 6%;
-  margin-left: 20%;
-  margin-right: 20%;
-}
-
-.button3 {
-  margin-bottom: 6%;
-  margin-left: 30%;
-  margin-right: 10%;
-}
-
-.button-icon {
-  width: 30%;
-  height: auto;
-  border-radius: 50%;
-}
-
-.footer-bar {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 10%;
-  background: #000;
-}
-
 ion-header {
   ion-toolbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 0%;
-  }
+    padding: 0 10px;
 
-  .title-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-  }
+    .title-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+    }
 
-  img.logo {
-    width: 6.5%;
-    height: 6.5%;
-    margin-left: 43%;
-  }
+    .logo {
+      width: 10%;
+      height: 10%;
+      margin-left: 5%;
+    }
 
-  ion-title {
-    text-align: center;
-    font-size: 1.2rem;
-    line-height: 1.5;
-    margin-right: 30%;
-  }
+    ion-title {
+      text-align: center;
+      font-size: 1.2rem;
+      line-height: 1.5;
+      margin-right: 10%;
+    }
 
-  .icon {
-    width: auto;
-  }
-  
-  .icon, .back-icon {
-    width: 30px;
-    height: auto;
+    .icon {
+      width: 30px;
+      height: auto;
+    }
   }
 }
 
@@ -144,7 +101,7 @@ ion-header {
 }
 
 ion-menu {
-  --width: 25%; /* Ajuste el ancho del menú */
+  --width: 75%; /* Ajuste el ancho del menú */
 }
 
 ion-content {
@@ -163,4 +120,48 @@ ion-item {
 
 ion-item[button] {
   cursor: pointer;
+}
+
+/* Media Queries para Pantallas Pequeñas */
+@media (max-width: 600px) {
+  .characters {
+    flex-direction: column;
+    align-items: center;
+
+    .character {
+      max-width: 50%;
+      max-height: 50%;
+    }
+  }
+
+  .buttons {
+    width: 100%;
+
+    ion-button {
+      font-size: 0.8rem;
+    }
+  }
+
+  ion-header {
+    ion-toolbar {
+      .title-container {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .logo {
+        width: 15%;
+        height: 15%;
+      }
+
+      ion-title {
+        margin: 0;
+        font-size: 1rem;
+      }
+
+      .icon {
+        width: 20px;
+      }
+    }
+  }
 }
